Added Open Source Code link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       
     </div>
     <br>
-    <footer>Coded by Cindy Tayama</footer>
+    <footer> <a href="https://github.com/CNDTT/weather-app">Open-source code</a> by Cindy Tayama</footer>
     <script src="src/index.js"> </script>
   </body>
 </html>
