Added degrees symbols to temperature

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row mx-auto">
        <div class="col-3 today-temp">
           <span id="temperature">25</span
-                >
+                >°C
         <span class="units">
                   <a href="#" id="celsius-link">°C</a> |
                   <a href="#" id="fahrenheit-link">°F</a>
@@ -71,8 +71,8 @@
 
             <div class="col-6 today-low-temp">
               <span id="low-temperature">
-                15°C
-              </span>
+                15
+              </span>°C
             </div>
           </div>
           <div class="row">
@@ -89,7 +89,7 @@
              
             </div>
             <div class="col-6 today-high-temp">
-               <span id="high-temperature"> 28°C </span>
+               <span id="high-temperature"> 28 </span>°C
             </div>
           </div>
           <div class="row">
